--- a/scss/_content.scss
+++ b/scss/_content.scss
@@ -93,7 +93,7 @@
 #caption {
 
     line-height: 1.5em;
-    font: $sXsm;
+    font-size: $sXsm;
     color: beige;
 }
 
@@ -156,7 +156,7 @@
 
 }
 
-section h1 {
+section h1{
 
     margin-top: 10%;
 
@@ -165,26 +165,51 @@ section h1 {
 
 // ajustes para reservas
 
+
 .reservas {
 
-    padding: 10%;
+    padding-bottom: 5%;
     align-content: center;
-
-
+    margin-top: 5%;
 }
 
 .bg-opacity-100 {
 
-    border-radius: 2%;
+    border-radius: 5%;
     background-image: url(../multimedia/galeria/extras/45403006_eps.png);
-
-
+    margin: auto;
+    
 }
 
 #h1R {
 
-    padding-bottom: 3%;
+    padding-bottom: 5%;
+    margin-top: 5%;
+}
 
+#reserva{
+
+    border-radius: 2%; 
+    border: solid;
+    width:auto; 
+    height:400px;
+    margin-bottom:5%;
+    
+}
+
+@media (max-width: 350px) {
+
+    
+    #reserva{
+
+        
+        width: auto;
+        height: 280px;
+        margin-bottom: 5px;
+
+
+    }
+   
 }
 
 
