--- a/css/styles.css
+++ b/css/styles.css
@@ -332,6 +332,22 @@ footer a :hover {
   margin-bottom: 1px;
 }
 
+h2 {
+  margin-right: auto;
+  margin-left: auto;
+  text-align: center;
+  font-size: 1.5em;
+  padding-top: 0.8em;
+}
+
+h3 {
+  margin-right: auto;
+  margin-left: auto;
+  text-align: center;
+  font-size: 1.4em;
+  padding-top: 1em;
+}
+
 .animdog {
   left: 11%;
   position: absolute;
