--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -13,6 +13,6 @@ $colorNav:rgb(5, 50, 135);
 $btnColor:rgb(220,224,222);
 $btnHoverColor2:#d3d9df;
 $btnHoverColor: rgb(141, 130, 130);
-
+$colorH:background-color rgb(242, 242, 241);
 
 
