--- a/css/styles.css
+++ b/css/styles.css
@@ -69,37 +69,6 @@ a {
   color: rgb(141, 130, 130);
 }
 
-.btn {
-  background-color: rgb(220, 224, 222);
-  border: none;
-  padding: -2px -1px;
-  text-align: center;
-  font-size: 1em;
-  margin: 1px 1.5px;
-  transition: 0.3s;
-}
-.btn .btn:hover {
-  background-color: #d3d9df;
-  color: rgb(141, 130, 130);
-}
-
-.navbar-nav.me-auto.mb-2.mb-lg-0 {
-  flex-direction: row;
-  justify-content: center;
-  margin-left: 0.5em;
-}
-
-@media (max-width: 350px) {
-  .navbar-nav.me-auto.mb-2.mb-lg-0 {
-    flex-direction: row;
-    justify-content: center;
-    margin-left: -4.5px;
-  }
-}
-#colorH {
-  background-color: rgb(242, 242, 241);
-}
-
 .text-left {
   text-align: left;
 }
@@ -180,6 +149,11 @@ iframe {
     flex-direction: row;
   }
 }
+.one:first-letter {
+  font-size: x-large;
+  font-weight: 400;
+}
+
 .justify {
   background-color: rgb(242, 242, 241);
   justify-content: center;
@@ -252,13 +226,6 @@ iframe {
 #h1 {
   margin-top: 5%;
   padding-bottom: 10%;
-}
-
-#dog {
-  padding-top: 5%;
-  margin-bottom: 0;
-  width: auto;
-  margin: auto;
 }
 
 #h1P {
@@ -348,8 +315,20 @@ h3 {
   padding-top: 1em;
 }
 
-.animdog {
-  left: 11%;
+#working {
+  margin-top: 15%;
+  text-align: center;
+  padding: 0%;
+}
+
+.containerD {
+  transform: scale(0.5);
+  margin-left: 1%;
+  margin-top: 1%;
+  padding-bottom: 1px;
+}
+.containerD .animdog {
+  left: 10%;
   position: absolute;
   background-color: #fdb44e;
   height: 75px;
@@ -357,8 +336,7 @@ h3 {
   border-radius: 0px 0px 0px 120px;
   top: 55%;
 }
-
-.bodydog {
+.containerD .bodydog {
   background-color: #fdb44e;
   height: 90px;
   width: 180px;
@@ -367,8 +345,7 @@ h3 {
   left: 70px;
   border-radius: 0px 0px 0px 60px;
 }
-
-.ear {
+.containerD .ear {
   background-color: rgba(151, 89, 2, 0.8);
   height: 90px;
   width: 40px;
@@ -377,8 +354,7 @@ h3 {
   left: 70px;
   border-radius: 0px 0px 100px 10px;
 }
-
-.tail {
+.containerD .tail {
   position: relative;
   width: 0;
   height: 0;
@@ -392,50 +368,43 @@ h3 {
   animation: wag 1s infinite;
   animation-play-state: running;
 }
-
-.tail:hover {
+.containerD .tail:hover {
   animation-play-state: paused;
 }
-
 @keyframes wag {
   50% {
     transform: rotate(10deg);
   }
 }
-.leg1,
-.leg2,
-.leg3,
-.leg4 {
+.containerD .leg1,
+.containerD .leg2,
+.containerD .leg3,
+.containerD .leg4 {
   background-color: #fdb44e;
   height: 50px;
   width: 18px;
   position: relative;
   border-radius: 0px 0px 100px 10px;
 }
-
-.leg1 {
+.containerD .leg1 {
   left: 100px;
   top: 48px;
 }
-
-.leg2 {
+.containerD .leg2 {
   bottom: 2px;
   left: 130px;
 }
-
-.leg3 {
+.containerD .leg3 {
   left: 205px;
   bottom: 50px;
   background-color: rgba(151, 89, 2, 0.5);
   z-index: -1;
 }
-
-.leg4 {
+.containerD .leg4 {
   left: 232px;
   bottom: 100px;
 }
-
-.nose {
+.containerD .nose, .containerD .nose.eye {
   background-color: black;
   height: 15px;
   width: 15px;
@@ -444,18 +413,21 @@ h3 {
   right: 2.5px;
   bottom: 492px;
 }
-
-.eye {
+.containerD .eye {
   background-color: black;
   height: 10px;
   width: 10px;
   border-radius: 50%;
   position: relative;
-  bottom: 490px;
+  bottom: 492px;
   left: 50px;
 }
-
-.tongue {
+.containerD .nose.eye {
+  left: 50px;
+  height: 10px;
+  width: 10px;
+}
+.containerD .tongue {
   background-color: tomato;
   height: 15px;
   width: 4px;
@@ -465,15 +437,69 @@ h3 {
   bottom: 465px;
   rotate: 45deg;
 }
-
-#working {
-  margin-top: 10%;
-  text-align: center;
-  background-color: aquamarine;
+.containerD #last {
+  margin-top: -50px;
 }
 
-#last {
-  margin-top: -50px;
+section.container-fluid.mt-lg-5.mt-sm-5.mb-lg-5 {
+  margin-top: 45%;
+  margin-bottom: 30%;
+  margin-left: 15%;
+  margin-right: auto;
+  width: auto;
+}
+
+.text {
+  font-size: 40px;
+  font-family: helvetica;
+  font-weight: bold;
+  color: #b44c4c;
+  text-transform: uppercase;
+}
+
+.parpadea {
+  animation-name: parpadeo;
+  animation-duration: 1s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+  -webkit-animation-name: parpadeo;
+  -webkit-animation-duration: 1s;
+  -webkit-animation-timing-function: linear;
+  -webkit-animation-iteration-count: infinite;
+}
+
+@-moz-keyframes parpadeo {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@-webkit-keyframes parpadeo {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes parpadeo {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 /*# sourceMappingURL=styles.css.map */
