--- a/scss/_commons.scss
+++ b/scss/_commons.scss
@@ -56,6 +56,19 @@ h3 {
     padding-bottom: 1em;
 }
 
+// h2 {
+
+//     @include H-s(1.5em,0.8em); 
+ 
+//  }
+ 
+//  h3 {
+     
+//      @include H-s(1.4em,1em);
+     
+//    }
+ 
+
 h5 {
 
     padding-top: 1em;
