--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,8 +2,7 @@
 @import "font";
 @import "vars";
 @import "nav";
-@import "botoneras";
 @import "commons";
 @import "content";
 @import "mixins";
-@import "galería";
+@import "Page-404";
