--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -14,5 +14,6 @@ $btnColor:rgb(220,224,222);
 $btnHoverColor2:#d3d9df;
 $btnHoverColor: rgb(141, 130, 130);
 $colorH:background-color rgb(242, 242, 241);
-
+$colorBtnup:rgba(15, 60, 182, 0.742);
+$colorTable: rgba(55, 171, 197, 0.591);
 
