--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,4 +5,6 @@
 @import "commons";
 @import "content";
 @import "mixins";
-@import "Page-404";
+@import "page-404";
+@import "galería";
+@import "reserva";
