--- a/scss/_content.scss
+++ b/scss/_content.scss
@@ -55,7 +55,11 @@ span.carousel-control-next-icon {
 #media {
 
     align-items: center;
-    background-color: rgba(167, 182, 177, 0.299);
+    background-color: rgb(80, 98, 112);
+    width: auto;
+    height: 480px;
+    padding: 0;
+   
 
 }
 
@@ -63,26 +67,13 @@ span.carousel-control-next-icon {
 
     display: flex;
     width: auto;
-    background-color: rgba(167, 182, 177, 0.299);
-    column-gap: 5em;
+    column-gap: 3em;
     flex-direction: row;
     justify-content: space-around;
     padding-top: 1.5%;
-    background-color: rgb(242, 242, 241);
+    background-color: rgb(242, 242, 240);
 
 }
-
-.m-auto {
-
-    padding: 1.5%;
-    width: 300px;
-    height: 480px;
-    background-color: black;
-    align-content: center;
-    vertical-align: middle;
-
-}
-
 
 @media (max-width: 750px) {
 
@@ -155,27 +146,6 @@ span.carousel-control-next-icon {
     margin-top: 5%;
     padding-bottom: 10%;
 
-}
-
-// ajustes para peluquería
-
-
-.h1P {
-
-    margin-top: 20vh;
-    padding-bottom: 2%;
-  
-
-}
-
-.colorT{
-
-    background-color: $colorTable;
-}
-
-.tabla{
-
-  margin-bottom: 10%;
 }
 
 // snipet para el footer */
