--- a/scss/_font.scss
+++ b/scss/_font.scss
@@ -5,3 +5,28 @@
 * {
     font-family: 'Poppins', sans-serif
 }
+
+// fonts y control del formulario
+
+.font {
+    font-size: 0.9rem;
+   
+}
+
+.form-control {
+    display: block;
+    width: 90%;
+    padding: 0.375rem 0.75rem;
+    font-size: 0.8rem;
+    font-weight: 300;
+    line-height: 1.2;
+    color: #212529;
+    background-color: #fff;
+    border: 0.5px solid #ced4da; 
+    margin-left: 4vw;   
+}
+
+label{
+
+    padding-bottom: 5%;
+}
